--- a/test.css
+++ b/test.css
@@ -611,6 +611,40 @@ section {
 a, button {
   outline: none;
 }
+
+ .portfolio-dots {
+     position: absolute;
+     bottom: 20px;
+     width: auto;
+     margin: 20px auto 0;
+     display: -webkit-box;
+     display: -ms-flexbox;
+     display: flex;
+     -webkit-box-pack: center;
+     -ms-flex-pack: center;
+     justify-content: center;
+     z-index: 5;
+   }
+
+   .portfolio-dots .dot {
+    cursor: pointer;
+    height: 16px;
+    width: 16px;
+    margin: 0 10px;
+    border-radius: 50%;
+    border: solid #fff;
+    display: inline-block;
+    -webkit-transition: background-color, -webkit-transform .4s;
+    transition: background-color, transform .4s, -webkit-transform .4s;
+}
+
+.portfolio-dots .dot-active {
+  background-color: #19b5fe;
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+
 .hidden-large {
   display: none;
 }
