--- a/test.css
+++ b/test.css
@@ -611,8 +611,12 @@ section {
 a, button {
   outline: none;
 }
+.photogallery-dots{
+left: 0;
+right: 0;
+}
 
- .portfolio-dots {
+ .portfolio-dots, .photogallery-dots {
      position: absolute;
      bottom: 20px;
      width: auto;
@@ -626,7 +630,7 @@ a, button {
      z-index: 5;
    }
 
-   .portfolio-dots .dot {
+   .portfolio-dots .dot{
     cursor: pointer;
     height: 16px;
     width: 16px;
@@ -638,8 +642,25 @@ a, button {
     transition: background-color, transform .4s, -webkit-transform .4s;
 }
 
-.portfolio-dots .dot-active {
+   .photogallery-dots .dot {
+    cursor: pointer;
+    height: 5px;
+    width: 25px;
+    margin: 0 6px;
+    border-radius: 5px;
+    background-color: #fff;
+    display: inline-block;
+    -webkit-transition: background-color, -webkit-transform .4s;
+    transition: background-color, transform .4s, -webkit-transform .4s;
+}
+
+.portfolio-dots .dot-active{
   background-color: #19b5fe;
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+.photogallery-dots .dot-active {
+  background-color: #ffd11a;
   -webkit-transform: scale(1.2);
   transform: scale(1.2);
 }
@@ -1228,9 +1249,13 @@ nav.popup-menu .close-menu-btn img {
   margin: 0 auto;
   text-align: center;
 }
+
 #gallery .gallery-slider .slide {
   margin: 0 auto!important;
-  width: 100%}
+  width: 100%;
+  transition: opacity .5s;
+ 
+}
 #gallery .gallery-slider .slider-arrow {
   position: absolute;
   top: 50%;
@@ -1238,6 +1263,20 @@ nav.popup-menu .close-menu-btn img {
   z-index: 100;
   cursor: pointer;
 }
+
+.gallery-slide {
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 0;
+}
+
+.gallery-slide_active {
+  opacity: 1;
+  position: relative;
+}
+
+
 #gallery .gallery-slider .slider-arrow span {
   display: block;
   width: 36px;
@@ -1246,6 +1285,12 @@ nav.popup-menu .close-menu-btn img {
   border-radius: 50%;
   text-align: center;
   padding-top: 11px;
+  transition: background-color 0.4s;
+}
+
+#gallery .gallery-slider .slider-arrow span:hover {  
+  background-color: #a38510;
+  
 }
 #gallery .gallery-slider .slider-arrow.prev {
   left: 0;
@@ -1256,7 +1301,8 @@ nav.popup-menu .close-menu-btn img {
 #gallery .gallery-slider .slider-dots {
   left: 50%;
   margin-left: -65px;
-  bottom: 5%}
+  bottom: 5%
+}
 #cards {
   padding-bottom: 4rem;
 }
